# Gl_Craft

./: .gitignore  CMakeLists.txt  GlCraft  README.md  build.bat  build.sh  clean.bat  clean.sh  imgui.ini
.github/workflows/: cmake-single-platform.yml
code/: CMakeLists.txt  GlCraft  imgui.ini
code/shaders/: fshader.fs
code/src/: block.cpp  chunk.cpp  chunk.h  main.cpp  utils.cpp  utils.h
save/: save.cp
shaders/: fshader.fs  fshader2.fs  vshader.vs  vshader2.vs
src/: AssetManager.cpp  AssetManager.h  AssetVertex.h  Biome.cpp  Biome.h  Block.cpp  Block.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Chunk.cpp  Chunk.h  Constants.hpp  Input.cpp  Input.h  Main.cpp  Main.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.h  Player.cpp  Player.h  Ray.cpp  Ray.h  Texture.cpp  Texture.h  TextureCubeMap.cpp  TextureCubeMap.h  Utils.cpp  VertexArray.cpp  VertexBufferLayout.h  Window.cpp  Window.h  WindowsInput.cpp  WindowsInput.h  (+10 more)
